# pbi-client-sdk

./: Makefile  README.md  pyproject.toml
examples/: power_bi_explorer.py
pbi_client_sdk/: const.py  tenant.py  utils.py  workspace.py
