[tool.poetry]
name = "pbi-client-sdk"
version = "0.1.0"
description = "Python wrapper for Power BI REST API"
authors = ["Duy Huynh <vndee.huynh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
